@@ -203,7 +203,6 @@ export(testVirtual)
 export(traceOff)
 export(traceOn)
 export(tryNew)
-export(trySilent)
 export(unRematchDefinition)
 export(validObject)
 export(validSlotNames)
